# paper-to-html-note

./: LICENSE  README.md  SKILL.md  pyproject.toml
assets/: README_en.md  index-template.html  template.css  template.html  template.html.bak  template.js  template_en.css  template_en.html  template_en.html.bak  template_en.js
assets/examples/: toward_personalized_llm_powered_agents_reading_notes.html
references/: component-catalog.md  content-depth-rules.md  design-system.md  index-builder.md  organization-strategies.md  quality-checks.md  subagent-prompt-reference.md
scripts/: assemble_figures.py  build_manifest.py  extract_figures.py
