[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "paper-to-html-note"
version = "1.0.0"
description = "Convert academic PDF papers to self-contained, interactive HTML reading notes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Paper to HTML Note Contributors"}
]
keywords = ["pdf", "academic", "paper", "html", "reading-notes", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
extract-figures = "scripts.extract_figures:main"
assemble-figures = "scripts.assemble_figures:main"

[project.urls]
Homepage = "https://github.com/your-org/paper-to-html-note"
Repository = "https://github.com/your-org/paper-to-html-note"
Issues = "https://github.com/your-org/paper-to-html-note/issues"
